align comment list container in the center

--- a/app/assets/stylesheets/all/comments.css.scss
+++ b/app/assets/stylesheets/all/comments.css.scss
@@ -1,8 +1,10 @@
 #commentList {
   margin:30px 0 80px 0;
+  text-align:center;
   #commentListDetails {text-align:right;}
   .comment {
     margin-bottom:20px;
+    text-align:left;
     .postComment {
       min-height:100px;
       margin:0;
