--- a/app/views/users/_avatar_form.html.erb
+++ b/app/views/users/_avatar_form.html.erb
@@ -6,13 +6,18 @@
   </p>
 
   <div class="formField">
-    <%= label_tag :avatar, "Select a file:" %><br/>
+    <%= label_tag :avatar, "Select a File" %><br/>
     <%= file_field_tag :avatar %>
     <%= f.hidden_field :avatar_url %>
+  </div><br/>
+
+  <div class="formField ipBox">
+    <div class="ipHeader"><%= label_tag :image_preview, "Image Preview" %></div>
+    <%= user_lg_avatar(@user) %>
   </div>
 
   <div class="formSubmit">
-    <%= submit_tag 'Upload Avatar' %>
+    <%= f.submit 'Upload Avatar' %>
   </div>
 <% end %>
 
