display image preview with js

--- a/app/views/users/_avatar_form.html.erb
+++ b/app/views/users/_avatar_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="formField ipBox">
     <div class="ipHeader"><%= label_tag :image_preview, "Image Preview" %></div>
-    <%= user_lg_avatar(@user) %>
+    <div class="ipImage"><%= user_lg_avatar(@user) %></div>
   </div>
 
   <div class="formSubmit">
