--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -72,7 +72,7 @@
     border:1px solid #eee;
     border-radius:5px;
     margin:20px 0;
-    img {margin:10px 0;}
+    .ipImage {padding:15px 0;}
     .ipHeader {
       display:block;
       background:#eee;
