added dimensions instructions on user avatar upload form

--- a/app/views/users/_avatar_form.html.erb
+++ b/app/views/users/_avatar_form.html.erb
@@ -2,7 +2,7 @@
   <h1 class="formHeader">Change Avatar</h1>
 
   <p class="formInstructions">
-    Max 1MB file size. Image file formats only (jpg, jpeg, png, gif).
+    Max 1MB file size. Image file formats only (jpg, jpeg, png, gif). Dimensions<br/>of 120px by 120px work best.
   </p>
 
   <div class="formField">
