--- a/app/views/support_tickets/new.html.erb
+++ b/app/views/support_tickets/new.html.erb
@@ -1,5 +1,7 @@
 <div class="center">
   <%= form_for @ticket, html: {class: 'form'} do |f| %>
+    <%= form_errors_for(@ticket) %>
+
     <%= f.hidden_field :user_id, value: current_user.try(:id) %>
     <h1 class="formHeader">Submit A Support Ticket</h1>
 
@@ -15,7 +17,7 @@
 
     <div class="formField">
       <%= f.label :message %><br/>
-      <%= f.text_area :message %>
+      <%= f.text_area :message, placeholder: "Try to be descriptive, but brief. Maximum 1500 characters." %>
     </div><br/>
 
     <div class="formSubmit"><%= f.submit 'Create Ticket' %></div>
