--- a/app/views/support_tickets/new.html.erb
+++ b/app/views/support_tickets/new.html.erb
@@ -18,7 +18,7 @@
     <div class="formField">
       <%= f.label :message %>
       <span class="fieldReq"><span id="supportMessageCharCount">1000</span> characters left</span><br/>
-      <%= f.text_area :message, placeholder: "Try to be descriptive, but brief. Maximum 1000 characters." %>
+      <%= f.text_area :message, placeholder: "Try to be descriptive, but brief. Maximum 1000 characters.", maxlength: 1000 %>
     </div><br/>
 
     <div class="formSubmit"><%= f.submit 'Create Ticket' %></div>
