open login popup form when clicking on comment reply link if no current user

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -13,7 +13,9 @@
     </div>
     <% if root_comment %>
       <div class="commentReply">
-        <%= link_to load_reply_form_path(comment), class: 'replyFormLoadLink', data: {comment_id: comment.id} do   %>
+        <%= link_to(load_reply_form_path(comment), 
+          class: "replyFormLoadLink#{' loginPopupLink' unless current_user}", 
+          data: {comment_id: comment.id}) do %>
           Reply to comment <%= content_tag(:span, '', class: 'commentIcon') %>
         <% end %>
       </div>
