--- a/app/assets/stylesheets/all/suggestions.css.scss
+++ b/app/assets/stylesheets/all/suggestions.css.scss
@@ -1,10 +1,31 @@
 #ns {
-  position:relative;
+  text-align:center;
+  margin:20px 0 0;
+  padding:20px;
+  background:#fcffaa;
+  border-radius:8px;
   #nsHeader {
-    margin:0;
+    margin:0 0 5px;
+    font-weight:300;
   }
   #nsLinkWrapper {
-    position:absolute;
-    right:0;
+    display:inline-block;
+    min-width:300px;
+    a {
+      background:#aaa;
+      display:block;
+      padding:10px;
+      color:#fff;
+      border-radius:5px;
+      &:hover {background:#bbb;}
+    }
+  }
+}
+
+#suggestionList {
+  margin:20px 0 0;
+  .suggestionPreview {
+    .suggestionTitle {margin:0; font-weight:bold;}
+    .suggestionDescription {margin:0;}
   }
 }
