linked post and suggestion links in footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,9 +48,9 @@
       <section id="footerContent">
         <p id="footerLinks">
           <%= link_to 'Home', root_path %> &#8226;
-          <%= link_to 'Add A Post' %> &#8226;
+          <%= link_to 'Add A Post', new_post_path %> &#8226;
           <%= link_to 'Posting Guidelines' %> &#8226;
-          <%= link_to 'Make A Suggestion' %> &#8226;
+          <%= link_to 'Make A Suggestion', suggestions_path %> &#8226;
           <%= link_to 'Support Ticket', support_path %> &#8226;
           <%= link_to 'FAQ' %> &#8226;
           <%= link_to 'Privacy Policy' %>
