added a main.css file for common styles that apply in multiple places

--- a/app/views/suggestions/index.html.erb
+++ b/app/views/suggestions/index.html.erb
@@ -1,6 +1,6 @@
-<div id="ns">
-  <h1 id="nsHeader">We Want To Hear What You Have To Say!</h1>
-  <div id="nsLinkWrapper"><%= link_to "Make A Suggestion", new_suggestion_path %></div>
+<div class="banner">
+  <h1 class="bannerHeader">We Want To Hear What You Have To Say!</h1>
+  <div class="bannerContent"><%= link_to "Make A Suggestion", new_suggestion_path, class: 'bannerButton' %></div>
 </div>
 
 <div id="suggestionList">
