--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,13 +16,15 @@
           <%= image_tag('logo.png', alt: 'logo', id: 'logo') %>
         <% end %>
       </div>
-      <ul id="nav">
-        <% if current_user %>
-          <li><%= link_to current_user.username, current_user %></li><li><%= link_to 'Logout', logout_path %></li>
-        <% else %>
-          <li><%= link_to 'Sign Up', signup_path %></li><li><%= link_to 'Login', login_path %></li>
-        <% end %>
-      </ul>
+      <nav id="nav">
+        <ul>
+          <% if current_user %>
+            <li><%= link_to current_user.username, current_user %></li><li><%= link_to 'Logout', logout_path %></li>
+          <% else %>
+            <li><%= link_to 'Sign Up', signup_path %></li><li><%= link_to 'Login', login_path %></li>
+          <% end %>
+        </ul>
+      </nav>
     </div>
 
     <div id="body">
