--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,7 +13,10 @@
       </ul>
     </div>
   </h1>
-  <div class="bannerContent"><%= link_to "Make A Post", new_suggestion_path, class: 'bannerButton' %></div>
+  <div class="bannerContent">
+    <%= link_to "Make A Post", new_suggestion_path, class: 'bannerButton' %>
+    <span class="bannerSubmessage">If you haven't yet, please reading the <%= link_to 'posting guidelines' %>.
+  </div>
 </div>
 
 <div id="previewList">
