changed class name on .sortMenu to .dropMenu

--- a/app/views/comments/_comment_container.html.erb
+++ b/app/views/comments/_comment_container.html.erb
@@ -1,7 +1,7 @@
 <div id="commentListDetails">
   <b><%= pluralize(@total, "comment") %> total</b> | 
   Sort by: 
-  <ul class="sortMenu">
+  <ul class="dropMenu">
     <% Comment::SORT_OPTIONS.each do |sort_face, sort_value| %>
       <li class="<%= 'selected' if params[:comment_sort] == sort_value %>"><%= link_to sort_face, params.merge(comment_sort: sort_value) %></li>
     <% end %>
