--- a/app/assets/stylesheets/all/main.css.scss
+++ b/app/assets/stylesheets/all/main.css.scss
@@ -22,3 +22,31 @@
     .bannerSubmessage {font-size:0.77em;}
   }
 }
+
+.sMenu {
+  display:inline-block;
+  position:relative;
+}
+ul.dropMenu {
+  text-align:left;
+  margin:0;
+  padding:0;
+  background:#fff;
+  border:1px solid #ddd;
+  padding:4px;
+  display:none;
+  position:absolute;
+  left:0;
+  top:100%;
+  z-index:5;
+  border-radius:4px;
+  li {
+    list-style-type:none;
+    font-size:0.85em;
+    white-space: nowrap;
+    a {
+      display:block;
+      border-radius:3px;
+    }
+  }
+}
