put undo link for post flag and put report and undo link in a helper method

--- a/app/assets/stylesheets/all/icons.css.scss
+++ b/app/assets/stylesheets/all/icons.css.scss
@@ -23,3 +23,4 @@ a.actionLink {
   .report {width:18px; background-position:-42px 0;}
 }
 a.reportLink, a.deleteLink {background:#f33;}
+a.undoLink {background:#ddd;}
