changed background color of banner

--- a/app/assets/stylesheets/all/main.css.scss
+++ b/app/assets/stylesheets/all/main.css.scss
@@ -2,7 +2,7 @@
   text-align:center;
   margin:20px 0 0;
   padding:20px;
-  background:#fcffaa;
+  background:#ff9;
   border-radius:8px;
   .bannerHeader {
     margin:0 0 5px;
