use remote request when reporting post

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,7 +9,7 @@
       <%= post_report_link(@post) %>
       <ul class="dropMenu">
         <% Flag::REASON_LIST.each do |k,v| %>
-          <li><%= link_to k, post_flags_path(@post, flag: {reason: v}), method: :post, class: login_popup_class %></li>
+          <li><%= link_to k, post_flags_path(@post, flag: {reason: v}), method: :post, class: login_popup_class, remote: true %></li>
         <% end %>
       </ul>
     <% end %>
