fixed link on home#index banner

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
     </div>
   </h1>
   <div class="bannerContent">
-    <%= link_to "Make A Post", new_suggestion_path, class: 'bannerButton' %>
+    <%= link_to "Make A Post", new_post_path, class: 'bannerButton' %>
     <span class="bannerSubmessage">If you haven't yet, please reading the <%= link_to 'posting guidelines' %>.
   </div>
 </div>
