--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="center">
   <%= form_for @post, html: {class: 'form', id: 'postForm'} do |f| %>
-    <!-- <h1 class="formHeader">Reset Password</h1> -->
+    <h1 class="formHeader">Add A Post</h1>
 
     <!-- <p class="formInstructions">
       Enter your username or email below and then check your inbox for<br/> an email with password reset instructions.
