use existing .flash for js error messages

--- a/app/views/shared/_js_errors.js.erb
+++ b/app/views/shared/_js_errors.js.erb
@@ -1,6 +1,6 @@
-if ($(".jsError").length) {
-  $(".jsErrorMsg").text('<%= escape_javascript(error) %>');
-  $(".jsError").show();
+if ($(".alert").length) {
+  $(".alert").text('<%= escape_javascript(error) %>');
+  $(".flash").show();
 } else {
-  $("#content").prepend("<%= escape_javascript(js_errors(error)) %>")
+  $("#body").prepend("<%= escape_javascript(js_errors(error)) %>")
 }
