--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,9 +30,9 @@
     <div id="body">
       <% if flash[:alert] || flash[:notice] %>
         <div class="flash">
-          <%= link_to '&#10005;'.html_safe, '#', class: 'flashClose' %>
+          <div class="flashClose"><%= link_to 'X', '#', class: 'flashCloseLink' %></div>
           <% if flash[:alert] %>
-            <%= link_to '!', '#', class: 'flashShow' %>
+            <div class="flashShow"><%= link_to '!', '#', class: 'flashShowLink' %></div>
             <p class="alert"><%= flash[:alert] %></p>
           <% end %>
 
