--- a/app/views/shared/_js_errors.js.erb
+++ b/app/views/shared/_js_errors.js.erb
@@ -1,6 +1,12 @@
-if ($(".alert").length) {
-  $(".alert").text('<%= escape_javascript(error) %>');
-  $(".flash").show();
+if ($(".flash").length) {
+  if ($(".alert").length) {
+    $(".alert").text('<%= escape_javascript(error) %>');
+  } else {
+    $(".flash").html('<p class="alert"><%= escape_javascript(error) %></p>');
+  }
+  $(".flash, .alert, .flashClose").show();
+  $(".flashShow").hide();
 } else {
   $("#body").prepend("<%= escape_javascript(js_errors(error)) %>")
 }
+initializeFlashMessageLinks();
