--- a/app/views/comments/_comment_container.html.erb
+++ b/app/views/comments/_comment_container.html.erb
@@ -1,5 +1,5 @@
 <div id="commentListDetails">
-  <b><%= pluralize(@total, "comment") %> total</b> | 
+  <b><%= pluralize(@total, "reply") %> total</b> | 
   Sort by: 
   <ul class="dropMenu">
     <% Comment::SORT_OPTIONS.each do |sort_face, sort_value| %>
