--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -7,11 +7,11 @@
 </div>
 <%= form_for [@post, Comment.new] do |f| %>
   <div class="formField">
-    <b><%= f.label :message, 'Leave a comment' %></b><br/>
+    <b><%= f.label :message, 'Leave a reply' %></b><br/>
     <%= f.text_area :message %>
   </div>
 
   <div class="formSubmit">
-    <%= f.submit 'Add Comment' %>
+    <%= f.submit 'Add Reply' %>
   </div>
 <% end %>
