--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -44,8 +44,8 @@
     <%= render 'comments/comment_form' %>
   </div>
 <% else %>
-  <h3 id="cfpHeader">Leave A Comment</h3>
-  <p id="cfpMessage">You must <%= link_to 'login', login_path, class: 'loginPopupLink' %> before you can leave a comment. Don't have an account? Sign-up for free <%= link_to 'here', signup_path %>.</p>
+  <h3 id="cfpHeader">Leave A Reply</h3>
+  <p id="cfpMessage">You must <%= link_to 'login', login_path, class: 'loginPopupLink' %> before you can leave a reply. Don't have an account? Sign-up for free <%= link_to 'here', signup_path %>.</p>
 <% end %>
 
 <hr class="dottedDivider" />
