changed text under preview stats

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,12 +24,12 @@
     <div class="previewPost">
       <div class="previewStats">
         <div class="previewReputation"><%= post.reputation %></div>
-        <p class="previewStatLabel">REP</p>
+        <p class="previewStatLabel">REPUTATION</p>
       </div>
 
       <div class="previewStats">
         <div class="previewCommentCount"><%= post.comments.size %></div>
-        <p class="previewStatLabel">COMMENTS</p>
+        <p class="previewStatLabel">REPLIES</p>
       </div>
 
       <div class="previewContent">
