linked faqs in footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
           <%= link_to 'Posting Guidelines' %> &#8226;
           <%= link_to 'Make A Suggestion', suggestions_path %> &#8226;
           <%= link_to 'Support Ticket', support_path %> &#8226;
-          <%= link_to 'FAQ' %> &#8226;
+          <%= link_to 'FAQ', faqs_path %> &#8226;
           <%= link_to 'Privacy Policy' %>
         </p>
         <p id="footerCopy">Copyright &copy; 2014 What Am I Thinking Of</p>
