--- a/app/assets/stylesheets/all/faqs.css.scss
+++ b/app/assets/stylesheets/all/faqs.css.scss
@@ -1,3 +1,22 @@
-// Place all the styles related to the faqs controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#faqForm {
+  text-align:left;
+  .formField {
+    width:100%;
+    margin:10px 0 0;
+    input, textarea {width:100%; box-sizing:border-box; border:1px solid #ddd; border-radius:4px;}
+    input[type='text'] {height:35px;}
+    textarea {height:75px;}
+  }
+  .formSubmit {
+    text-align:center;
+    padding:10px 0 0 0;
+    input[type='submit'] {
+      width:300px;
+      height:35px;
+      background:orange;
+      color:#fff;
+      border:0;
+      border-radius:4px;
+    }
+  }
+}
