--- a/app/views/faqs/_form.html.erb
+++ b/app/views/faqs/_form.html.erb
@@ -1,3 +1,17 @@
-<%= form_for Faq.new do |f| %>
-  <%= f.submit %>
-<% end %>
+<div class="center">
+  <%= form_for Faq.new, html: {id: 'faqForm'} do |f| %>
+    <div class="formField">
+      <%= f.label :question %><br/>
+      <%= f.text_field :question %>
+    </div>
+
+    <div class="formField">
+      <%= f.label :answer %><br/>
+      <%= f.text_area :answer %>
+    </div>
+
+    <div class="formSubmit">
+      <%= f.submit %>
+    </div>
+  <% end %>
+</div>
