use full text title

--- a/app/views/faqs/index.html.erb
+++ b/app/views/faqs/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="pageHeader">FAQs</h1>
+<h1 class="pageHeader">Frequently Asked Questions</h1>
 
 <% if current_user.try(:admin?) %>
   <%= render 'form' %>
