--- a/app/assets/stylesheets/all/users.css.scss
+++ b/app/assets/stylesheets/all/users.css.scss
@@ -22,4 +22,13 @@ div.userImageMedWrapper {width:75px; max-height:75px; display:inline-block; text
       font-size:2.5em;
     }
   }
+
+  #profileContent {
+    #profileContentHeader {
+      font-weight:normal;
+      color:#888;
+      margin-bottom:0;
+    }
+    #previewList {margin-top:10px;}
+  }
 }
