renamed preview partial to be singular

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,7 +20,7 @@
 </div>
 
 <div id="previewList">
-  <%= render partial: 'posts/previews', collection: @posts, as: :post %>
+  <%= render partial: 'posts/preview', collection: @posts, as: :post %>
 </div>
 
 <script>
