--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
   <div id="profileContent">
     <h2 id="profileContentHeader">Recent Posts</h2>
     <div id="previewList">
-      <%= render partial: 'posts/previews', collection: @recent_posts, as: :post %>
+      <%= render partial: 'posts/preview', collection: @recent_posts, as: :post %>
     </div>
   </div>
 </div>
