--- a/app/views/reputations/_display.html.erb
+++ b/app/views/reputations/_display.html.erb
@@ -1,4 +1,4 @@
-<div class="postRep">
+<div class="postRep" id="<%= object_css_identifier(object, 'rep') %>">
   <%= voting_link(1.0, object, user_rep) %>
   <p class="repCount"><%= reputation_display(reputations) %></p>
   <%= voting_link(-1.0, object, user_rep) %>
