singularized local variable name

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -26,7 +26,7 @@
       locals: {
         object: comment,
         user_rep: details[:user_rep],
-        reputations: details[:reputation]})
+        reputation: details[:reputation]})
     %>
   </div>
 </div>
