--- a/app/views/reputations/_display.html.erb
+++ b/app/views/reputations/_display.html.erb
@@ -1,5 +1,5 @@
 <div class="postRep" id="<%= object_css_identifier(object, 'rep') %>">
   <%= voting_link(1.0, object, user_rep) %>
-  <p class="repCount"><%= reputation_display(reputations) %></p>
+  <p class="repCount"><%= reputation_display(reputation) %></p>
   <%= voting_link(-1.0, object, user_rep) %>
 </div>
